--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>How Real Systems Work</title>
+  <title>Under The Hood | How Real Systems Work</title>
   <meta name="description"
     content="Learn how real software systems work through the lens of data structures. Concepts, trade-offs, and real-world usage." />
 
-  <meta property="og:title" content="How Real Systems Work" />
+  <meta property="og:title" content="Under The Hood | How Real Systems Work" />
   <meta property="og:description" content="Concepts, trade-offs, and real-world usage of core data structures." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:image" content="/og-image.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@Lovable" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:image" content="/og-image.png" />
 </head>
 
 <body>
